--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            height: 100vh;
+            justify-content: flex-start;
+            min-height: 100dvh;
             margin: 0;
             background-color: #000;
             color: #fff;
             position: relative;
+            padding-top: 5rem;
+            box-sizing: border-box;
         }
         #score-container {
-            position: absolute;
-            top: 2rem;
+            position: fixed;
+            top: 1rem;
+            left: 0;
+            right: 0;
+            z-index: 10;
             font-size: 1.5rem;
             font-family: 'Roboto Mono', monospace;
             display: none;
@@ -215,6 +220,7 @@
 
             const input = document.createElement('input');
             input.type = 'number';
+            input.inputMode = 'numeric';
             input.placeholder = '?';
             input.autofocus = true;
 
@@ -239,9 +245,12 @@
                     messageElement.className = 'message success';
                     input.readOnly = true;
                     updateScore();
+                    
+                    // Generate next question immediately to avoid losing focus
+                    generateQuestion();
+                    
                     setTimeout(() => {
                         messageElement.textContent = '';
-                        generateQuestion();
                     }, 400);
                 }
             });
