--- a/index.html
+++ b/index.html
@@ -138,10 +138,34 @@
         .error {
             color: #dc3545;
         }
+        #install-button {
+            position: fixed;
+            bottom: 2rem;
+            left: 50%;
+            transform: translateX(-50%);
+            display: none;
+            background: #000;
+            color: #00ffff;
+            border: 2px solid #00ffff;
+            padding: 0.8rem 1.5rem;
+            font-family: 'Roboto Mono', monospace;
+            font-size: 1rem;
+            border-radius: 2rem;
+            cursor: pointer;
+            z-index: 100;
+            text-shadow: 0 0 5px #00ffff;
+            box-shadow: 0 0 10px #00ffff, inset 0 0 5px #00ffff;
+            transition: all 0.3s ease;
+        }
+        #install-button:active {
+            transform: translateX(-50%) scale(0.95);
+            box-shadow: 0 0 20px #00ffff, inset 0 0 10px #00ffff;
+        }
     </style>
 </head>
 <body>
     <div id="score-container"></div>
+    <button id="install-button">Installer l'application</button>
     <div class="container">
         <div id="history"></div>
         <div class="message" id="message"></div>
@@ -153,6 +177,8 @@
         const historyContainer = document.getElementById('history');
         const messageElement = document.getElementById('message');
         const scoreContainer = document.getElementById('score-container');
+        const installButton = document.getElementById('install-button');
+        let deferredPrompt;
 
         const scoreMessages = [
             "Super ! {n} victoires !",
@@ -172,6 +198,15 @@
         let expectedValue = 0;
         let activeInput = null;
         let score = 0;
+
+        // Register Service Worker for PWA
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('./sw.js')
+                    .then(reg => console.log('SW registered!', reg))
+                    .catch(err => console.log('SW registration failed: ', err));
+            });
+        }
 
         function updateScore() {
             score++;
@@ -292,14 +327,36 @@
         // Initial question
         generateQuestion();
 
-        // Register Service Worker for PWA
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('./sw.js')
-                    .then(reg => console.log('SW registered!', reg))
-                    .catch(err => console.log('SW registration failed: ', err));
+        // Handle PWA installation
+        window.addEventListener('beforeinstallprompt', (e) => {
+            // Prevent Chrome 67 and earlier from automatically showing the prompt
+            e.preventDefault();
+            // Stash the event so it can be triggered later.
+            deferredPrompt = e;
+            // Update UI notify the user they can add to home screen
+            installButton.style.display = 'block';
+        });
+
+        installButton.addEventListener('click', (e) => {
+            // hide our user interface that shows our A2HS button
+            installButton.style.display = 'none';
+            // Show the prompt
+            deferredPrompt.prompt();
+            // Wait for the user to respond to the prompt
+            deferredPrompt.userChoice.then((choiceResult) => {
+                if (choiceResult.outcome === 'accepted') {
+                    console.log('User accepted the A2HS prompt');
+                } else {
+                    console.log('User dismissed the A2HS prompt');
+                }
+                deferredPrompt = null;
             });
-        }
+        });
+
+        window.addEventListener('appinstalled', (event) => {
+            console.log('App was installed');
+            installButton.style.display = 'none';
+        });
     </script>
 </body>
 </html>
